# TheLegendOfZip

./: CMake.txt  CMakelists.txt  README.md  RaylibUbuntu.md  main.c
The Legend of Zip - Versao Final/BattleSystem/: BattleMenu4.c
The Legend of Zip - Versao Final/include/: zip.h
The Legend of Zip - Versao Final/lib/: draw.c  lista.c  save.c
The Legend of Zip - Versao Final/src/: zip.c
Zip - V 2.0/BattleMenu/resources/: LICENSE.md  distortion330.fs
Zip - V 2.0/main/: SaveFileTeste.c  zip.c
Zip - V1.0/BattleMenu/: BattleMenu.c
Zip - V1.0/main/: zip.c
Zip - V1.0/main/resources/: distortion100.fs
prototipos/BattleMenu/resources/: sound.rfx
prototipos/main/resources/: Sprite-0004.aseprite
prototipos/zipv2.0/BattleMenuAED2/: BattleMenu2.c
prototipos/zipv2.0/main/: CMakeLists.txt  Jogo.c  move.h
prototipos/zipv2.0/main/resources/personagens/: zip final.aseprite
