cmake_minimum_required(VERSION 3.10) 
project(MeuProjeto) 
set(CMAKE_C_STANDARD 11) 
add_executable(MeuProjeto main.c) 
project(MeuProjeto) 
set(CMAKE_C_STANDARD 11) 
add_executable(MeuProjeto main.c) 
project(MeuProjeto) 
set(CMAKE_C_STANDARD 11) 
add_executable(MeuProjeto main.c) 
project(MeuProjeto) 
set(CMAKE_C_STANDARD 11) 
add_executable(TheLegendofZip zip.c) 
